fix for bug 122200 - floaters regression and fix for bug 99461 - floating tables will be constrained in the same line if they can fit quirks mode only sr= attinasi, r= kin, a= asa